# mpv-translate

./: .gitignore  README.md  launch.bat  launch.sh  main.lua  pyproject.toml  requirements.txt
mpv_translate/: _get_mpv_exe.py  audio.py  cli.py  config.py  config.toml  coreloop.py  monitor.py  nllb.py  ocr.py  ocr_loop.py  ocr_translate.py  overlay.py  scheduler.py  subtitle.py  translate.py
